--- a/.drone.yml
+++ b/.drone.yml
@@ -1,7 +1,8 @@
-pipeline:
-  build:
-    image: python:3.9.2-alpine
-    commands:
-      - pip install psutil distro
-      - make install
-      - pyfetch
+kind: pipeline
+name: default
+steps:
+- name: pyfetch
+  image: python
+  commands:
+    - pip install psutil distro
+    - python pyfetch
