--- a/.drone.yml
+++ b/.drone.yml
@@ -2,7 +2,7 @@ kind: pipeline
 name: default
 steps:
 - name: pyfetch
-  image: python
+  image: python:3.9.2-windowsservercore-1809
   commands:
     - pip install psutil distro
     - python pyfetch
