--- a/.drone.yml
+++ b/.drone.yml
@@ -1,6 +1,6 @@
 pipeline:
   build:
-    image: python:windowsservercore-ltsc2016
+    image: python:3.9.2-windowsservercore-1809
     commands:
     - pip install psutil distro
     - python pyfetch
