--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install distro psutil colorama
+        pip install distro psutil colorama pyinstaller
     - name: build with pyinstaller
       run: |
         pyinstaller --distpath . --onefile pma.py
