--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
         pip install distro psutil colorama pyinstaller
     - name: build with pyinstaller
       run: |
-        pyinstaller --distpath . --onefile pyfetch
+        pyinstaller --distpath . --onefile pyfetch.py
     - name: Upload assets for tag
       uses: softprops/action-gh-release@v1
       if: startsWith(github.ref, 'refs/tags/')
