--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,11 +21,12 @@ jobs:
     - name: build with pyinstaller
       run: |
         pyinstaller --distpath . --onefile pyfetch.py
+        tar -cJf pyfetch-windows.tar.xz pyfetch.exe
     - name: Upload assets for tag
       uses: softprops/action-gh-release@v1
       if: startsWith(github.ref, 'refs/tags/')
       with:
           files: |
-            ./pyfetch.exe
+            ./pyfetch-windows.tar.xz
       env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
