--- a/.github/workflows/linux-release.yml
+++ b/.github/workflows/linux-release.yml
@@ -21,7 +21,9 @@ jobs:
     - name: build with pyinstaller
       run: |
         pyinstaller --distpath . --onefile pyfetch.py
-        tar -cJf pyfetch-linux.tar.xz pyfetch
+        wget https://github.com/kreat0/pyfetch/raw/master/LICENSE
+        wget https://github.com/kreat0/pyfetch/raw/master/Makefile
+        tar -cJf pyfetch-linux.tar.xz pyfetch LICENSE Makefile
     - name: Upload assets for tag
       uses: softprops/action-gh-release@v1
       if: startsWith(github.ref, 'refs/tags/')
